<resources>
    <string name="app_name">ShaidullinAR_02_06</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_title">Fill in your email and password to continue</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="remember_password">Remember password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Log in</string>
    <string name="email_placeholder">Login</string>
    <string name="password_placeholder">********</string>
    <string name="chats_title">Chats</string>
</resources>