<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/welcome_back"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/login_title"
        android:layout_marginVertical="8dp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_hint"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
        />
        <EditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="true"
            android:inputType="text"
            android:background="@drawable/field"
            android:hint="@string/email_placeholder"
            android:paddingHorizontal="10dp"
            android:paddingVertical="14dp"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_hint"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="true"
            android:inputType="textPassword"
            android:background="@drawable/field"
            android:hint="@string/password_placeholder"
            android:paddingHorizontal="10dp"
            android:paddingVertical="14dp"
        />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/auth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:layout_marginTop="180dp"
    />

</LinearLayout>